--- a/html-class-site/css/main.css
+++ b/html-class-site/css/main.css
@@ -118,6 +118,20 @@ main article img{}
 main article h1{}
 main article p{}
 
-footer{}
-footer section{}
+footer{
+    background-color: #ffcccc;
 
+}
+footer section{
+    width: 30%;
+    padding: 5px;
+    display: inline-block;
+    text-align: center;
+}
+footer nav ul{
+    padding: 0;
+    margin: 0;
+}
+footer nav ul li{
+    display: inline;
+}
