--- a/Final-Project-site/css/article.css
+++ b/Final-Project-site/css/article.css
@@ -6,7 +6,7 @@
 }
 
 html{
-    background-image: url(../images/27.jpg);
+    background-image: url(https://yuris.moe/DL/27-com.jpg);
     height: 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -31,11 +31,9 @@ body article{
     width: 880px;
     height: 280px;
 }
-
 body form {
     background-color: #ccff99;
 }
-
 header nav{
     position: absolute;
     top: 5px;
