--- a/Final-project-with-cheats/styles/material.css
+++ b/Final-project-with-cheats/styles/material.css
@@ -905,7 +905,7 @@ p {
   margin-bottom: 16px; }
 
 a {
-  color: rgb(255,64,129);
+  color: rgb(255, 204, 153);
   font-weight: 500; }
 
 blockquote {
